--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.2",
-    "@types/node": "10.17.27",
+    "@types/jest": "^29.5.12",
+    "@types/node": "22.5.4",
     "@types/prettier": "2.6.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
-    "aws-cdk": "2.38.1",
-    "ts-node": "^10.9.1",
-    "typescript": "~3.9.7"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "aws-cdk": "2.158.0",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.6.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.38.1",
-    "cdk-aurora-globaldatabase": "^2.1.26"
+    "aws-cdk-lib": "^2.158.0",
+    "constructs": "^10.3.0",
+    "source-map-support": "^0.5.21",
+    "cdk-aurora-globaldatabase": "^2.3.602"
   }
 }
