--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.4",
     "@types/prettier": "2.6.0",
+    "aws-cdk": "2.158.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.158.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2"
   },
   "dependencies": {
     "aws-cdk-lib": "^2.158.0",
+    "cdk-aurora-globaldatabase": "^2.3.602",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21",
-    "cdk-aurora-globaldatabase": "^2.3.602"
+    "xregion-ssm-parameter-reader": "^0.0.2"
   }
 }
